src/components/clipping-item/clipping-item.css
@keyframes scale-in {
  from {
    transform: scale(0);
    opacity: 0;
  }
  to {
    transform: scale(1);
    opacity: 1;
  }
}

.clipping-container {
  animation: scale-in .35s;
}

.clipping {
  width: calc(33vw - 6rem);
  min-height: 20rem;
}

.book-title {
  font-size: 14px;
  color: #333;
}

.book-content {
  font-size: 16px;
  color: #333;
}

@media (max-width: 768px) {
  .clipping {
    width: auto;
  }
}

